@@ -2,6 +2,10 @@ Revision history for Perl extension App::Info.
 
 0.11  
       - Improved validation for the error_level parameter.
+      - In distribution tests, no longer testing to see that user and group
+        methods in HTTP::Apache return values when Apache is installed, as
+        sometimes folks don't have User and Group directives set in their
+        httpd.conf files. Grrr...
 
 0.10  Wed Jun  5 23:58:54 2002
       - Added new error_level parameter to new(). This tells App::Info objects
